--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,11 @@
       href="~@angular/material/prebuilt-themes/indigo-pink.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.1.3/css/ol.css"
+      type="text/css"
+    />
   </head>
   <body>
     <app-root></app-root>
